temporarily make bg pink on iOS safari

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,24 +11,23 @@ body {
 }
 
 body {
-  height: 100%;
-  width: 100%;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   position: absolute;
+
   background: linear-gradient(
     124deg,
-    #ff2400,
-    #e81d1d,
-    #e8b71d,
-    #e3e81d,
     #1de840,
     #1ddde8,
     #2b1de8,
     #dd00f3,
-    #dd00f3
+    #dd00f3,
+    #ff2400,
+    #e81d1d,
+    #e8b71d,
+    #e3e81d
   );
   background-size: 1800% 1800%;
 
@@ -95,8 +94,4 @@ body {
 
 .App img {
   pointer-events: none;
-}
-
-.thanku {
-  font-size: 24px;
 }
